<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.breakingnews.MainActivity"
    android:orientation="vertical">

        <CheckBox
            android:id="@+id/worldBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_world" />
        <CheckBox
            android:id="@+id/politicsBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_politics" />
        <CheckBox
            android:id="@+id/businessBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_business" />
        <CheckBox
            android:id="@+id/technologyBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_technology" />
        <CheckBox
            android:id="@+id/scienceBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_science" />
        <CheckBox
            android:id="@+id/sportsBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sports" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="subscribe"
            android:text="@string/button_subscribe" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            android:id="@+id/text_hello"
        />
</LinearLayout>

<!-- <?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:id="@+id/text_hello"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout> -->